styles(modular): fix alignment on top

--- a/themes/local/scss/_components.scss
+++ b/themes/local/scss/_components.scss
@@ -20,8 +20,6 @@
 	}
 }
 
-body:not(.modular) #body-wrapper > .container {
-	.modular-text, .container {
-		padding: 0;
-	}
+#start section.modular-text:nth-of-type(1) {
+	margin-top: 4rem;
 }
